syntax = "proto3";

package mirero.daq.domain.update.protos.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "daq_common.proto";

option csharp_namespace = "Mirero.DAQ.Domain.Update.Protos.V1";

service MppUpdateService {
  rpc ListMppSetupVersions(ListMppSetupVersionsRequest) returns (ListMppSetupVersionsResponse) {}
  rpc DownloadMppSetupVersion (DownloadMppSetupVersionRequest) returns (stream mirero.daq.domain.common.protos.StreamBuffer) {}
}

message MppSetupVersion {
  string id = 1;
  string version = 2;
  int32 year = 3;
  int32 month = 4;
  int32 day = 5;
  int32 no = 6;
  string type = 7;
  string product = 8;
  string site = 9;
}

message ListMppSetupVersionsRequest {
  mirero.daq.domain.common.protos.QueryParameter query_parameter = 1;
}

message ListMppSetupVersionsResponse {
  mirero.daq.domain.common.protos.PageResult page_result = 1;
  repeated MppSetupVersion mpp_setup_versions = 2;
}

message DownloadMppSetupVersionRequest {
  string mpp_setup_version_id = 1;
  int64 chunk_size = 2;
}